-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b08
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313523 | 21.0.1 | Matthias Baesken | P4 | Resolved | Fixed | b05 |
| JDK-8318578 | 17.0.10 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
There are a number of assertions in growableArray , for example to check for a valid index to access/remove elements.
Those assertions can be improved, e.g. by showing the bad index value used in case of failure.
Those assertions can be improved, e.g. by showing the bad index value used in case of failure.
- backported by
-
JDK-8313523 Improve assertions in growableArray
-
- Resolved
-
-
JDK-8318578 Improve assertions in growableArray
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/e80200f3
-
Commit
openjdk/jdk21u/d65f1c8b
-
Commit
openjdk/jdk/b772e67e
-
Review
openjdk/jdk17u-dev/1887
-
Review
openjdk/jdk21u/25
-
Review
openjdk/jdk/14946
(3 links to)