8312395: Improve assertions in growableArray

Reviewed-by: clanger
Backport-of: b772e67e2929afd9f9d6a4b08713e41f891667c0